--- a/README.org
+++ b/README.org
@@ -14,7 +14,7 @@
 
 ** Люди
 
-[[https://github.com/abtv/book-ideas/blob/master/ideas/peopleware_demarko_lister.md][👥 Человеческий фактор: успешные проекты и команды / Том ДеМарко, Тимоти Листер]]
+[[https://github.com/abtv/book-ideas/blob/master/ideas/peopleware_demarko_lister.org][👥 Человеческий фактор: успешные проекты и команды / Том ДеМарко, Тимоти Листер]]
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/mythical_man_month_brooks.md][💣 Мифический человеко-месяц: как создаются программные системы / Фредерик Брукс]]
 
