--- a/ideas/mythical_man_month_brooks.org
+++ b/ideas/mythical_man_month_brooks.org
@@ -1,10 +1,11 @@
-💣 Мифический человеко-месяц: как создаются программные системы / Фредерик Брукс
+💣 Мифический человеко-месяц: как создаются программные системы / Брукс Фредерик
 
-- Глава 1. Почему большой проект нельзя сделать за две недели?
+** Глава 1. Почему большой проект нельзя сделать за две недели?
   - Кажется, что мы можем писать больше 100 строк кода в день. Однако дело не только в написании кода. Нужно учитывать еще и обработку ошибок, нестандартных ситуаций, интеграцию, документацию и сопровождение. Проект делается нелинейно.
   - Последние ошибки в проекте найти сложнее всего.
   - Ошибки проектировния нельзя компенсировать локальными ускорениями.
-- Глава 2. Почему на реализацию проектов тратится больше времени, чем планировалось?
+
+** Глава 2. Почему на реализацию проектов тратится больше времени, чем планировалось?
   - Проект состоит из набора задач.
   - Выполнение одних задач зависит от выполнения других задач.
   - Некоторые задачи нельзя выполнять параллельно.
@@ -14,44 +15,54 @@
   - Чем больше на встрече людей, тем меньше выгода от разбиения на задачи. Это и время на переключение контекста и время на сбор встречи и простой.
   - Девять женщин не родят ребёнка за месяц: человеко-месяц – это плохая единица измерения.
   - Добавление людей в уже опаздывающий проект обычно ещё больше задерживает его: нужно время на введение людей в проект, при этом число задач, которые можно распараллеливанить, не так велико.
-- Глава 3. Сколько людей должно работать над проектом?
+
+** Глава 3. Сколько людей должно работать над проектом?
   - Метафора хирургической бригады: один человек проводит операцию, а остальные ассистируют. Задача бригады максимально помогать хирургу.
   - Хирург - самые опытный разработчик, пишет весь код. Кроме того, хирург руководит всем проектом, за ним последнее слово.
   - Второй пилот - тоже опытный, но у него меньше опыта, чем у хирурга. Отрабатывает идеи хирурга. Если что-то случится с хирургом, то второй пилот будет заменять его.
   - Администратор - помогает решать административные вопросы, чтобы разгрузить хирурга.
   - Редактор - хирург пишет черновик документации, а редактор дооформляет ее, чтобы экономить время хирурга.
   - Контролёр - готовит тесты и данные для хирурга.
-- Глава 4. Что самое важное в архитектуре проекта?
+
+** Глава 4. Что самое важное в архитектуре проекта?
   - Концептуальное единство.
   - На этапе проектирования чем меньше людей, тем лучше.
   - Метафора часов как абстракции: стрелки есть и в наручных часах и в настенных, а реализация отличается. Архитектор создает абстракцию и устанавливает ограничения, но НЕ диктует реализацию.
   - Ограничения поощряют творчество.
-- Глава 5. Что произойдёт, если всеми силами пытаться избежать проблем первой реализации системы?
+
+** Глава 5. Что произойдёт, если всеми силами пытаться избежать проблем первой реализации системы?
   - При разработке первой системы архитектор осторожен и не используют новые рискованные подходы.
   - При разработке второй системы у архитектора уже есть успешный опыт и он захочет реализовать все новые неопробованные подоходы, т.к. у него есть ложная уверенность, что тебе пора это сделать.
   - Лучше всего брать один новый подход за раз: так и новое будет внедряться и риск будет под контролем.
-- Глава 7. Что, если не технологии, проваливает проекты?
+
+** Глава 7. Что, если не технологии, проваливает проекты?
   - Почти всегда проекты проваливаются не из-за технологических ограничений, а из-за проблем с коммуникацией и организацией бесперебойной работы. См. подробнее в книге "Человеческий фактор: успешные проекты и команды".
-- Глава 8. Почему долгосрочные планы и оценки времени – это ложь?
+
+** Глава 8. Почему долгосрочные планы и оценки времени – это ложь?
   - Обычно нет одной большой задачи, по которой задерживается проект.
   - Как правило, большинство задач запаздывает понемногу и задержки накапливаются, что приводит к общему отставанию проекта от плана.
   - Нужно понимать, что наверстать позже не получится, это ложный оптимизм.
   - Оценки и планы нужно корректировать регулярно, чтобы была возможность внести изменения в объем работ.
-- Глава 9. Что понятнее алгоритмы или данные?
+
+** Глава 9. Что понятнее алгоритмы или данные?
   - Данные
-- Глава 10. Зачем и сколько нужно документации?
+
+** Глава 10. Зачем и сколько нужно документации?
   - Документировать нужно ключевые принятые решения.
   - В процессе документирования становится понятно где у нас белые пятна.
   - Другие члены команды получают необходимую информацию.
   - Документацию нужно периодически пересматривать.
-- Глава 11. Почему нужно выбрасывать прототип?
+
+** Глава 11. Почему нужно выбрасывать прототип?
   - Сразу создать продукт без ошибок проектирования сложно, особенно не типовой.
   - Если сразу делать первую версию на выброс, то на ней можно проверить ключевые принятые решения, затем выбросить и писать реализацю для продакшена.
-- Глава 12. Какие инструменты использовать?
+
+** Глава 12. Какие инструменты использовать?
   - Знакомые всем участникам проекта.
   - Требующие минимальной настройки (их настроит кто-то один).
   - Это касается инструментов коллективного использования, а вот, например, редактор у каждого может быть свой, т.к. каждый разработчик настраивает его для себя.
-- Глава 13. Как проектировать сверху-вниз?
+
+** Глава 13. Как проектировать сверху-вниз?
   - Сначала набрасывается грубая схема системы и работы.
   - Затем итеративно уточняются отдельные места сверху-вниз.
   - Мы всегда идем сверху-вниз, стараясь по максимуму скрывать детали.
