How would you move mount Fuji: move to org file format

--- a/README.org
+++ b/README.org
@@ -18,7 +18,7 @@
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/mythical_man_month_brooks.org][💣 Мифический человеко-месяц: как создаются программные системы / Брукс Фредерик]]
 
-[[https://github.com/abtv/book-ideas/blob/master/ideas/how_would_you_move_mount_fuji.md][🗻 Как сдвинуть гору Фудзи? Подходы ведущих мировых компаний к поиску талантов / Паундстоун Уильям]]
+[[https://github.com/abtv/book-ideas/blob/master/ideas/how_would_you_move_mount_fuji.org][🗻 Как сдвинуть гору Фудзи? Подходы ведущих мировых компаний к поиску талантов / Паундстоун Уильям]]
 
 
 ** Навыки
