--- a/ideas/how_would_you_move_mount_fuji.org
+++ b/ideas/how_would_you_move_mount_fuji.org
@@ -1,19 +1,21 @@
-🗻 Как сдвинуть гору Фудзи
+🗻 Как сдвинуть гору Фудзи / Паундстоун Уильям
 
-- Основные идеи кратко:
+** Основные идеи кратко:
   - 1. Магии не существует - все логично, просто мы не всегда понимаем модель. Решение алгоритмических задач на интервью кажется бессмысленным пока не понимаешь, что крупные фирмы так просто уменьшают процент неподходящих кандидатов на входе и у них все ещё много кандидатов (то есть нанять человека дорого, а уволить еще дороже).
   - 2. На интервью лучше (по крайней мере для стартапа) искать людей, которые умеют думать, могут изучать новое (не все это могут) и доводить дела до конца.
   - 3. Проверить кандидата на настойчивость и навык убеждения других (делать вид, что его решение неверное, хотя кандидат был уверен в правильности решения).
   - 4. Уточняет ли кандидат условия задачи или сразу бросается решать ее (очень плохо для продуктовых команд).
   - 5. Задает ли кандидат вопрос "зачем это нужно"?
   - 6. Может ли кандидат выбрать решение, когда высока неопределенность (если да, то это хороший знак) или продолжает выбирать и по сути стоит на месте?
-- 1. Можно ли на интервью предсказать результаты работы кандидата?
+
+** Глава 1. Можно ли на интервью предсказать результаты работы кандидата?
   - Задача с револьвером. Важна формулировка, лобовое решение хуже.
   - Все ли задачи нужно решать или иногда нужно простое, но быстрое решение?
   - Двухсекундное интервью - интервьюеры (и студенты) оценивают человека в первые две секунды знакомства.
   - Microsoft не смотрит на прошлые заслуги тестеров, разработчиков и обычных менеджеров, но пытается предсказать будущие. Возможно, что они отсеивают точно неподходящих, но при этом отсеивают и часть подходящих тоже.
   - Microsoft действительно смотрит на прошлый опыт топ-менеджеров. Тут они оценивают результаты, а не только потенциал.
-- 2. Что такое интеллект?
+
+** Глава 2. Что такое интеллект?
   - Не только знания. Умение выделять главное, делать верные логические выводы, классифицировать понятия и делать выводы в новых условиях, настойчивость и удержание внимания.
   - Тестирование IQ: вопросы подготовлены белыми мужчинами, они же на них отвечают лучше всего. Больше практически не используется.
   - Лаборатория Шокли: тестирование и микроменеджмент. Все люди ушли из-за этого.
@@ -21,7 +23,8 @@
   - Сходство между обрядами посвящения в братство и решением головоломок на интервью.
   - Что такое производительность сотрудника и успешность в целом? Это довольно абстрактное понятие.
   - Другие типы интеллекта: например, двигательный.
-- 3. Культура интервью в Microsoft
+
+** Глава 3. Культура интервью в Microsoft
   - Оставайся голодным: это позволит всегда быть в форме. Без билетов первого класса, дорогих столов и т.п.
   - Одной логики недостаточно: часто нужно отойти от проверенного логичного решения и мыслить креативно и делать логические выводы одновременно.
   - Для победы нужно хотеть выиграть, одних способностей недостаточно.
@@ -30,14 +33,17 @@
   - Решительность - нужна для принятия решения, только ума недостаточно.
   - Ходячий труп - кандидат, которого точно не возьмут на работу, но ему еще об этом не сказали и продолжают собеседование.
   - Ищут умных И добивающихся результатов. Теоретики не подойдут.
-- 4. Необходимое качество
+
+** Глава 4. Необходимое качество
   - Навык убеждения других - необходимое качество менеджера программы.
   - Тест: притвориться, что не понимаешь, когда кандидат отвечает правильно и проверить, что он может спокойно и логично обосновать свою точку зрения, а не начать сомневаться или колебаться.
-- 5. Принципы решения головоломок
+
+** Глава 5. Принципы решения головоломок
   - На столе лежат карточки A F 2 7. На одной стороне буква, а на другой цифра. Какую карточку(и) нужно перевернуть, чтобы проверить правило "если на одной стороне карточки гласная буква, то на другой четное число"? Это простой тест на логику.
   - Принцип №1: быстро проверять варианты решений и как можно быстрее отбрасывать точно не рабочие.
   - Принцип №2: помимо решения проблемы оценивать насколько хорошо я решаю данную проблему.
-- 6. Почему фирмы используют головоломки?
+
+** Глава 6. Почему фирмы используют головоломки?
   - Стрессовые интервью проводятся, чтобы оценить как кандидат сможет работать в сложных условиях. Это нужно НЕ всем.
   - Головоломки позволяют отсеять часть точно неподходящих людей.
 
