--- a/README.org
+++ b/README.org
@@ -23,6 +23,6 @@
 
 ** Навыки
 
-[[https://github.com/abtv/book-ideas/blob/master/ideas/how_to_read_a_book_povarnin.md][📖 Как читать книгу / Поварнин Сергей]]
+[[https://github.com/abtv/book-ideas/blob/master/ideas/how_to_read_a_book_povarnin.org][📖 Как читать книгу / Поварнин Сергей]]
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/education_levenchuk.md][🎓 Образование для образованных / Левенчук Анатолий]]
