Goldratt It's not luck: structure to reflect main management problems

--- a/ideas/goal_its_not_luck.org
+++ b/ideas/goal_its_not_luck.org
@@ -1,11 +1,23 @@
 * ➡️ Цель: дело не в везении / Голдратт Элияху
 
-** 1. Как сделать нерешаемую проблему осознаваемой?
+** Четыре проблемы менеджмента:
+1. Осознать, что есть проблема, а не просто "здесь что-то не так".
+2. Что нужно менять?
+3. На что нужно менять?
+4. Как провести изменения?
+
+** 1. Как осознать, что есть проблема?
   - 1. Выписать все нежелательные явления: если случится Х, то будет У.
   - 2. Обсудить нежелательные явления, не предлагая решения.
   - Пример с яхтой на двоих с братом жены.
 
-** 2. Как разрешить конфликт?
+** 2. Как искать корневую причину нежелательных явлений? Как понять что именно менять?
+  - Выстрой причинно-следственные связи и опиши нежелательные явления.
+  - Затем покажи оппоненту и пусть он с ними согласится или предложит свое видение логических связей. Это ключевой момент: нужно описать логическую цепочку, существующую и важную для оппонента.
+  - Еще раз: все нежелательные явления нужно связать причинно-следственными связями (НЖЯ1 ведет к НЖЯ2). Как правило в основе текущего положения дел всегда лежит одна и та же ключевая проблема. Вот с ней и надо разбираться.
+  - Этот инструмент называется «дерево текущей реальности».
+
+** 3. Как разрешить конфликт?
   - Признать, что надо искать компромисс.
   - Я подумаю - это обещание. Надо назначить время и подумать.
   - Итерация 1:
@@ -18,12 +30,6 @@
     - Чувствовать себя комфортно в семье. Эта цель общая для всех членов семьи.
     - Можно ли обеспечить безопасность дочери, но вернуться в 12? Да, можно забрать ее самому.
   - Этот инструмент называется «грозовая туча».
-
-** 3. Как искать корневую причину нежелательных явлений? Что менять-то?
-  - Выстрой причинно-следственные связи и опиши нежелательные явления.
-  - Затем покажи оппоненту и пусть он с ними согласится или предложит свое видение логических связей. Это ключевой момент: нужно описать логическую цепочку, существующую и важную для оппонента.
-  - Еще раз: все нежелательные явления нужно связать причинно-следственными связями (НЖЯ1 ведет к НЖЯ2). Как правило в основе текущего положения дел всегда лежит одна и та же ключевая проблема. Вот с ней и надо разбираться.
-  - Этот инструмент называется «дерево текущей реальности».
 
 ** 4. Как составить план решения проблемы?
   - Сначала определи амбициозную цель.
