Clean Coder: add chapters 1-3.

--- a/README.org
+++ b/README.org
@@ -5,6 +5,11 @@
 А в [[https://github.com/abtv/talk-ideas][этом]] репозитории можно найти основные идеи из докладов.
 
 
+** Профессиональный кодекс
+
+[[https://github.com/abtv/book-ideas/blob/master/ideas/clean_coder_martin.org][💪 Идеальный программист: как стать провессионалом разработки ПО / Мартин Роберт]]
+
+
 ** Разработка
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/code_complete_mcconnell.org][💡 Совершенный код / Макконнелл Стив]]
