Clean coder: fix typos

--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 
 ** Профессиональный кодекс
 
-[[https://github.com/abtv/book-ideas/blob/master/ideas/clean_coder_martin.org][💪 Идеальный программист: как стать провессионалом разработки ПО / Мартин Роберт]]
+[[https://github.com/abtv/book-ideas/blob/master/ideas/clean_coder_martin.org][💪 Идеальный программист: как стать профессионалом разработки ПО / Мартин Роберт]]
 
 
 ** Разработка
