--- a/ideas/clean_coder_martin.org
+++ b/ideas/clean_coder_martin.org
@@ -1,4 +1,4 @@
-* 💪 Идеальный программист: как стать провессионалом разработки ПО / Мартин Роберт
+* 💪 Идеальный программист: как стать профессионалом разработки ПО / Мартин Роберт
 
 ** Глава 1. Кто такой профессионал?
   - Ответственный человек, добросовестно выполняющий свою работу и целенаправлено совершенствующийся.
