README: extract design section

--- a/README.org
+++ b/README.org
@@ -10,6 +10,11 @@
 [[https://github.com/abtv/book-ideas/blob/master/ideas/clean_coder_martin.org][💪 Идеальный программист: как стать профессионалом разработки ПО / Мартин Роберт]]
 
 
+** Проектирование
+
+[[https://github.com/abtv/book-ideas/blob/master/ideas/mythical_man_month_brooks.org][💣 Мифический человеко-месяц: как создаются программные системы / Брукс Фредерик]]
+
+
 ** Разработка
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/code_complete_mcconnell.org][💡 Совершенный код / Макконнелл Стив]]
@@ -17,20 +22,18 @@
 [[https://github.com/abtv/book-ideas/blob/master/ideas/patterns_of_enterprise_application_architecture_fowler.org][🏢 Шаблоны корпоративных приложений / Фаулер Мартин]]
 
 
+** Люди
+
+[[https://github.com/abtv/book-ideas/blob/master/ideas/peopleware_demarko_lister.org][👥 Человеческий фактор: успешные проекты и команды / ДеМарко Том, Листер Тимоти]]
+
+[[https://github.com/abtv/book-ideas/blob/master/ideas/how_would_you_move_mount_fuji.org][🗻 Как сдвинуть гору Фудзи? Подходы ведущих мировых компаний к поиску талантов / Паундстоун Уильям]]
+
+
 ** Теория ограничений
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/goal_its_not_luck.org][➡️ Цель: дело не в везении / Голдратт Элияху]]
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/system_approach_to_continuous_improvement.org][⚙️ Теория ограничений Голдратта. Системный подход к непрерывному совершенствованию / Детмер Уильям]]
-
-
-** Люди
-
-[[https://github.com/abtv/book-ideas/blob/master/ideas/peopleware_demarko_lister.org][👥 Человеческий фактор: успешные проекты и команды / ДеМарко Том, Листер Тимоти]]
-
-[[https://github.com/abtv/book-ideas/blob/master/ideas/mythical_man_month_brooks.org][💣 Мифический человеко-месяц: как создаются программные системы / Брукс Фредерик]]
-
-[[https://github.com/abtv/book-ideas/blob/master/ideas/how_would_you_move_mount_fuji.org][🗻 Как сдвинуть гору Фудзи? Подходы ведущих мировых компаний к поиску талантов / Паундстоун Уильям]]
 
 
 ** Навыки
