Project Phoenix: add the whole book

--- a/README.org
+++ b/README.org
@@ -29,11 +29,13 @@
 [[https://github.com/abtv/book-ideas/blob/master/ideas/how_would_you_move_mount_fuji.org][🗻 Как сдвинуть гору Фудзи? Подходы ведущих мировых компаний к поиску талантов / Паундстоун Уильям]]
 
 
-** Теория ограничений
+** Теория ограничений и DevOps
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/goal_its_not_luck.org][➡️ Цель: дело не в везении / Голдратт Элияху]]
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/system_approach_to_continuous_improvement.org][⚙️ Теория ограничений Голдратта. Системный подход к непрерывному совершенствованию / Детмер Уильям]]
+
+[[https://github.com/abtv/book-ideas/blob/master/ideas/project_phoenix.org][🦅 Проект «Феникс». Роман о том, как DevOps меняет бизнес к лучшему / Ким Джин, Спаффорд Джордж, Бер Кевин]]
 
 
 ** Навыки
