Design of design: add 1 and 2 chapters

--- a/README.org
+++ b/README.org
@@ -14,6 +14,8 @@
 
 [[https://github.com/abtv/book-ideas/blob/master/ideas/mythical_man_month_brooks.org][💣 Мифический человеко-месяц: как создаются программные системы / Брукс Фредерик]]
 
+[[https://github.com/abtv/book-ideas/blob/master/ideas/design_of_design_brooks.org][🏗️ Проектирование процесса проектирования / Брукс Фредерик]]
+
 
 ** Разработка
 
